<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ubitc.popuppush.ui.main_view.MainScreenViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/margin_and_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_and_padding"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_and_padding_small"
                            android:text="@string/ram"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_extra_small" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/margin_and_padding_small"
                                android:text="@{viewModel.availableRam}"
                                android:textColor="@color/white"
                                android:textSize="@dimen/txt_extra_small" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_and_padding_small"
                            android:text="@string/heap"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_extra_small" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/margin_and_padding_small"
                                android:text="@{viewModel.heapInfo}"
                                android:textColor="@color/white"
                                android:textSize="@dimen/txt_extra_small" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_and_padding_small"
                            android:text="@string/main_timer"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_extra_small" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_and_padding_small"
                            android:text="@{viewModel.mainTicks}"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_extra_small" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_and_padding_small"
                            android:text="@string/bug_list"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_extra_small" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_and_padding_small"
                            android:text="@{viewModel.bugs}"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_extra_small" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_and_padding"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_and_padding_small"
                        android:text="@string/playlist"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_extra_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_and_padding_small"
                        android:text="@{viewModel.medias}"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_extra_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_and_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_and_padding_small"
                        android:text="@string/playground"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_extra_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_and_padding_small"
                        android:gravity="start"
                        android:text="@{viewModel.mediasL1}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_extra_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_and_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_and_padding_small"
                        android:text="@string/corner"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_extra_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_and_padding_small"
                        android:gravity="start"
                        android:text="@{viewModel.mediasL2}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_extra_small" />
                </LinearLayout>


            </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>